--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <title>Stauros Overlay</title>
 </head>
 <body>
-    <div class="flex-container" id="canvas">
-        <div id="screen"></div>        
-        <div class="flex-container" id="side-panel">
-            <div id="camera"></div>   
-            <iframe title="chat" class="flex-container" id="chat" src="https://www.giambaj.it/twitch/jchat/v2/?channel=olavostauros&animate=true&bots=true&size=1&font=10&stroke=1&shadow=1"></iframe> 
-        </div>            
-    </div>     
-    
+    <div class="flex-container" id="canva">
+        <div id="side-panel">            
+            <iframe title="chat" id="chat" src="https://www.giambaj.it/twitch/jchat/v2/?channel=olavostauros&animate=true&bots=true&size=1&font=10&stroke=1&shadow=1"></iframe> 
+        </div>        
+    </div>         
 </body>
 </html>
