--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,34 +7,13 @@
     <title>Stauros Overlay</title>
 </head>
 <body>
-    <div class="container">
-        <div class="content">            
+    <div id="canva">
+        <div class="container">            
             <iframe title="chat" src="https://www.giambaj.it/twitch/jchat/v2/?channel=olavostauros&animate=true&bots=true&size=1&font=10&stroke=1&shadow=1"></iframe> 
         </div>
-        <div class="content">
+        <div class="container">
             <iframe title="alerts" src="https://dashboard.twitch.tv/widgets/alertbox#eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGVydF9zZXRfaWQiOiI3OGQwM2Q0Ny02YThlLTQzMjEtOGE3Zi0yYzViNDE1ZTQ4OTEiLCJ1c2VyX2lkIjoiNTY4OTI1NjQzIn0.E1cNogtgAcLDOMc6klptCItWCC3o-ija2wQ2PNJ9DQ0"></iframe>
         </div>        
     </div>         
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style.css" media="screen">
-    <title>Stauros Overlay</title>
-</head>
-<body>
-    <div class="container">
-        <div class="content">            
-            <iframe title="chat" src="https://www.giambaj.it/twitch/jchat/v2/?channel=olavostauros&animate=true&bots=true&size=1&font=10&stroke=1&shadow=1"></iframe> 
-        </div>
-        <div class="content">
-            <iframe title="alerts" src="https://dashboard.twitch.tv/widgets/alertbox#eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGVydF9zZXRfaWQiOiI3OGQwM2Q0Ny02YThlLTQzMjEtOGE3Zi0yYzViNDE1ZTQ4OTEiLCJ1c2VyX2lkIjoiNTY4OTI1NjQzIn0.E1cNogtgAcLDOMc6klptCItWCC3o-ija2wQ2PNJ9DQ0"></iframe>
-        </div>        
-    </div>         
-</body>
-</html>
->>>>>>> 3965534 (flex grow is working now)
