--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Stauros Overlay</title>
 </head>
 <body>
-    <div id="canva">
-        <div class="container">            
-            <iframe title="chat" src="https://www.giambaj.it/twitch/jchat/v2/?channel=olavostauros&animate=true&bots=true&size=1&font=10&stroke=1&shadow=1"></iframe> 
+    <div class="container" id="canva">
+        <div class="container" id="chat">            
+            <iframe  title="chat" src="https://www.giambaj.it/twitch/jchat/v2/?channel=olavostauros&animate=true&bots=true&size=1&font=10&stroke=1&shadow=1"></iframe> 
         </div>
-        <div class="container">
-            <iframe title="alerts" src="https://dashboard.twitch.tv/widgets/alertbox#eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGVydF9zZXRfaWQiOiI3OGQwM2Q0Ny02YThlLTQzMjEtOGE3Zi0yYzViNDE1ZTQ4OTEiLCJ1c2VyX2lkIjoiNTY4OTI1NjQzIn0.E1cNogtgAcLDOMc6klptCItWCC3o-ija2wQ2PNJ9DQ0"></iframe>
+        <div class="container" id="alerts">
+            <iframe  title="alerts" src="https://dashboard.twitch.tv/widgets/alertbox#eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGVydF9zZXRfaWQiOiI3OGQwM2Q0Ny02YThlLTQzMjEtOGE3Zi0yYzViNDE1ZTQ4OTEiLCJ1c2VyX2lkIjoiNTY4OTI1NjQzIn0.E1cNogtgAcLDOMc6klptCItWCC3o-ija2wQ2PNJ9DQ0"></iframe>
         </div>        
     </div>         
 </body>
